# AED-TimeTable

./: .gitignore  CMakeLists.txt  Change.cpp  Change.h  Class.cpp  Class.h  Doxyfile  Hour.cpp  Hour.h  Menu.cpp  Menu.h  Operations.cpp  Operations.h  README.md  ReadRequests.cpp  ReadRequests.h  Read_class_per_uc.cpp  Read_class_per_uc.h  Read_classes.cpp  Read_classes.h  Read_student.cpp  Read_student.h  SortFunctions.cpp  Student.cpp  Student.h  Subject.cpp  Subject.h  main.cpp
Doxygen/html/: _change_8h.html  _change_8h.js  _change_8h_source.html  _class_8h.html  _class_8h_source.html  _hour_8h.html  _hour_8h.js  _hour_8h_source.html  _menu_8h.html  _menu_8h_source.html  _operations_8h.html  _operations_8h.js  _operations_8h_source.html  _read__class__per__uc_8h.html  _read__class__per__uc_8h.js  _read__class__per__uc_8h_source.html  _read__classes_8h.html  _read__classes_8h.js  _read__classes_8h_source.html  _read__student_8h.html  _read__student_8h.js  _read__student_8h_source.html  _read_requests_8h.html  _read_requests_8h.js  _read_requests_8h_source.html  _student_8h.html  _student_8h_source.html  _subject_8h.html  _subject_8h_source.html  annotated.html  annotated_dup.js  class_change-members.html  class_change.html  class_change.js  class_class-members.html  class_class.html  class_class.js  class_containing.html  class_encapsulate.html  class_hour-members.html  (+41 more)
Doxygen/latex/: _change_8h.tex  _class_8h.tex  (+39 more)
code/: Change.h  Doxyfile  Menu.cpp  Menu.h  Operations.cpp  Operations.h  ReadRequests.h  Read_class_per_uc.h  Read_classes.cpp  Student.h  Subject.h
(+34 files in other folders)
