cmake_minimum_required(VERSION 3.23)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp Student.cpp Student.h Class.cpp Class.h Hour.cpp Hour.h Subject.cpp Subject.h Read_class_per_uc.cpp Read_class_per_uc.h Read_classes.cpp Read_classes.h Read_student.cpp Read_student.h Operations.cpp Operations.h Menu.cpp Menu.h)
