cmake_minimum_required(VERSION 3.23)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled main.cpp code/Student.cpp code/Student.h code/Class.cpp code/Class.h code/Hour.cpp code/Hour.h code/Subject.cpp code/Subject.h code/Read_class_per_uc.cpp code/Read_class_per_uc.h code/Read_classes.cpp code/Read_classes.h code/Read_student.cpp code/Read_student.h code/Operations.cpp code/Operations.h code/Menu.cpp code/Menu.h code/SortFunctions.cpp code/ReadRequests.cpp code/ReadRequests.h code/Change.cpp code/Change.h)

#Doxygen build made by Doxygen Wizard